# tauri-plugin-desktop-underlay

./: .gitattributes  .gitignore  .lintstagedrc.js  .prettierignore  .taplo.toml  Cargo.toml  FAQ.md  LICENSE  README.md  build.rs  package.json  pnpm-lock.yaml  rollup.config.js  rustfmt.toml  tsdown.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  format-and-lint.yml  lint.yml  release.yml
.husky/: pre-commit
examples/desktop-clock/: README.md  clock.html  index.html  main.html  manager.html  package.json  pnpm-lock.yaml  vite.config.ts
examples/desktop-clock/src/: Manager.tsx  main-manager.tsx
examples/desktop-clock/src-tauri/: Cargo.toml  tauri.conf.json
examples/desktop-clock/src-tauri/capabilities/: manager.json
examples/desktop-clock/src-tauri/src/: main.rs
examples/desktop-clock/src/clock/: App.css  App.tsx
examples/desktop-clock/src/main/: App.css
examples/desktop-clock/src/manager/: App.css  App.tsx
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: is_desktop_underlay.toml  set_desktop_underlay.toml  toggle_desktop_underlay.toml
permissions/schemas/: schema.json
src/: commands.rs  ext.rs  lib.rs
src/core/: linux.rs  macos.rs  mod.rs  windows.rs
