[package]
name = "tauri-plugin-desktop-underlay"
version = "0.0.1"
authors = ["Yao Xiao <yx2436@nyu.edu> (https://charlie-xiao.github.io/)"]
edition = "2021"
exclude = ["/examples", "/node_modules"]
links = "tauri-plugin-desktop-underlay"

description = "Tauri plugin for making a window a desktop underlay, as if it were a wallpaper."
keywords = ["tauri", "plugin", "desktop", "underlay", "wallpaper"]
homepage = "https://github.com/Charlie-XIAO/tauri-plugin-desktop-underlay"
repository = "https://github.com/Charlie-XIAO/tauri-plugin-desktop-underlay"
license-file = "LICENSE"
readme = "README.md"

[build-dependencies]
tauri-plugin = { version = "2.0.0-rc.7", features = ["build"] }

[dependencies]
anyhow = "1.0.86"
tauri = { version = "2.0.0-rc.8", features = ["tray-icon"] }

[target."cfg(target_os = \"linux\")".dependencies]
gtk = "0.18.1"
gdk = "0.18.0"

[target."cfg(target_os = \"macos\")".dependencies]
objc = "0.2.7"

[target."cfg(target_os = \"windows\")".dependencies]
windows = { version = "0.58.0", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation"
] }
