[package]
authors = ["Yao Xiao <yx2436@nyu.edu> (https://charlie-xiao.github.io/)"]
edition = "2021"
exclude = ["/examples", "/node_modules"]
links   = "tauri-plugin-desktop-underlay"
name    = "tauri-plugin-desktop-underlay"
version = "0.0.1"

description  = "Tauri plugin for making a window a desktop underlay, attached to the desktop, above the wallpaper, and below desktop icons."
homepage     = "https://github.com/Charlie-XIAO/tauri-plugin-desktop-underlay"
keywords     = ["tauri", "plugin", "desktop", "underlay", "wallpaper"]
license-file = "LICENSE"
readme       = "README.md"
repository   = "https://github.com/Charlie-XIAO/tauri-plugin-desktop-underlay"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
anyhow = "1"
tauri  = "2"

[target."cfg(target_os = \"linux\")".dependencies]
gdk = "0.18"
gtk = "0.18"

[target."cfg(target_os = \"macos\")".dependencies]
objc2 = "0.6"

[target."cfg(target_os = \"windows\")".dependencies]
windows = { version = "0.61", features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_Foundation",
] }
