[package]
authors     = ["you"]
description = ""
edition     = "2021"
name        = "desktop-clock"
version     = "0.1.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                         = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-desktop-underlay = { path = "../../../" }
