[package]
authors     = ["you"]
description = ""
edition     = "2021"
name        = "desktop-clock"
version     = "0.0.1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                         = { version = "2", features = ["macos-private-api"] }
tauri-plugin-desktop-underlay = { path = "../../../" }
tauri-plugin-process          = "2.2.1"
