[package]
edition = "2021"
name    = "desktop-clock"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                         = { version = "2", features = ["macos-private-api"] }
tauri-plugin-desktop-underlay = { path = "../../../" }
tauri-plugin-process          = "2.3.0"
